@@ -11,6 +11,7 @@ Changelog
  * Made cache control headers on Wagtail admin consistent with Django admin (Tomasz Knapik)
  * Notification emails now include an "Auto-Submitted: auto-generated" header (Dan Braghis)
  * Image chooser panels now show alt text as title (Samir Shah)
+ * Added `download_url` field to images in the API (Michael Harrison)
  * Fix: Respect next param on login (Loic Teixeira)
  * Fix: InlinePanel now handles relations that specify a related_query_name (Aram Dulyan)
  * Fix: before_delete_page / after_delete_page hooks now run within the same database transaction as the page deletion (Tomasz Knapik)
